--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,24 +1,20 @@
-name: example
-description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.0.0+1
+name: http_certificate_pinning_example
+description: Demonstrates how to use the http_certificate_pinning plugin.
+publish_to: 'none'
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  http_certificate_pinning:
-    path: ../
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+
+  http_certificate_pinning:
+    path: ../
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/images/
